[gd_scene load_steps=15 format=3 uid="uid://cgpoh447rrxmu"]

[ext_resource type="Script" path="res://Scripts/UI/char_select.gd" id="1_fp38c"]
[ext_resource type="Texture2D" uid="uid://t4e67bfrenj0" path="res://Assets/Textures/main background0.png" id="1_gbe1r"]
[ext_resource type="Script" path="res://Scripts/UI/left_arr.gd" id="2_4660l"]
[ext_resource type="Script" path="res://Scripts/UI/remove.gd" id="2_f7as4"]
[ext_resource type="PackedScene" uid="uid://ci1buhwjb03xx" path="res://Scenes/line_edit.tscn" id="2_jxkit"]
[ext_resource type="Script" path="res://Scripts/UI/right_arr.gd" id="3_bgaiw"]
[ext_resource type="Texture2D" uid="uid://vvotpw6jw5ql" path="res://Assets/Textures/player icon background0.png" id="3_fo3oa"]
[ext_resource type="Script" path="res://Scripts/UI/rename.gd" id="3_fyfcf"]
[ext_resource type="Texture2D" uid="uid://bgfk86s6ts6be" path="res://Assets/Textures/left arrow0.png" id="3_knohm"]
[ext_resource type="Texture2D" uid="uid://clw35063mfwi7" path="res://Assets/Textures/right arrow0.png" id="5_qgm6f"]
[ext_resource type="Texture2D" uid="uid://b5oml0kyfuu3j" path="res://Assets/Textures/delet player button0.png" id="8_8ep8m"]
[ext_resource type="Texture2D" uid="uid://s7o0ryus3am8" path="res://Assets/Textures/rename0.png" id="10_m7ei8"]
[ext_resource type="Texture2D" uid="uid://cyiumw5qgn7tn" path="res://Assets/Textures/switchpfp.png" id="13_cdfvf"]
[ext_resource type="Script" path="res://Scripts/UI/pfp.gd" id="14_om6e8"]

[node name="SelectBackground" type="TextureRect"]
custom_minimum_size = Vector2(250, 350)
offset_right = 250.0
offset_bottom = 350.0
texture = ExtResource("1_gbe1r")
script = ExtResource("1_fp38c")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 250.0
offset_bottom = 350.0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 10

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/CenterContainer"]
layout_mode = 2

[node name="P" type="CenterContainer" parent="MarginContainer/CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="PlayerIcon" type="TextureRect" parent="MarginContainer/CenterContainer/VBoxContainer/P"]
custom_minimum_size = Vector2(195, 195)
layout_mode = 2
texture = ExtResource("3_fo3oa")

[node name="B" type="CenterContainer" parent="MarginContainer/CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/CenterContainer/VBoxContainer/B"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
theme_override_constants/separation = 4

[node name="LeftArr" type="TextureRect" parent="MarginContainer/CenterContainer/VBoxContainer/B/HBoxContainer"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
texture = ExtResource("3_knohm")
script = ExtResource("2_4660l")

[node name="PlayerCol" type="ColorRect" parent="MarginContainer/CenterContainer/VBoxContainer/B/HBoxContainer"]
custom_minimum_size = Vector2(107, 0)
layout_mode = 2

[node name="RightArr" type="TextureRect" parent="MarginContainer/CenterContainer/VBoxContainer/B/HBoxContainer"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
texture = ExtResource("5_qgm6f")
script = ExtResource("3_bgaiw")

[node name="Spacer" type="ColorRect" parent="MarginContainer/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 8)
layout_mode = 2
color = Color(1, 1, 1, 0)

[node name="MarginContainer" type="CenterContainer" parent="MarginContainer/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(195, 61)
layout_mode = 2

[node name="Name" type="Label" parent="MarginContainer/CenterContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 24
text = "Click To
Add Player"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LineEdit" parent="MarginContainer/CenterContainer" instance=ExtResource("2_jxkit")]
visible = false
layout_mode = 2
caret_blink = true

[node name="Remove" type="TextureRect" parent="."]
custom_minimum_size = Vector2(20, 20)
layout_mode = 0
offset_left = 222.0
offset_top = 5.0
offset_right = 245.0
offset_bottom = 28.0
texture = ExtResource("8_8ep8m")
script = ExtResource("2_f7as4")

[node name="Rename" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 202.0
offset_top = 303.0
offset_right = 222.0
offset_bottom = 323.0
texture = ExtResource("10_m7ei8")
script = ExtResource("3_fyfcf")

[node name="PFP" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 33.0
offset_top = 35.0
offset_right = 65.0
offset_bottom = 67.0
texture = ExtResource("13_cdfvf")
script = ExtResource("14_om6e8")

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="clicked" from="MarginContainer/CenterContainer/VBoxContainer/B/HBoxContainer/LeftArr" to="." method="_on_left_arr_clicked"]
[connection signal="mouse_entered" from="MarginContainer/CenterContainer/VBoxContainer/B/HBoxContainer/LeftArr" to="MarginContainer/CenterContainer/VBoxContainer/B/HBoxContainer/LeftArr" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="MarginContainer/CenterContainer/VBoxContainer/B/HBoxContainer/LeftArr" to="MarginContainer/CenterContainer/VBoxContainer/B/HBoxContainer/LeftArr" method="_on_mouse_exited"]
[connection signal="clicked" from="MarginContainer/CenterContainer/VBoxContainer/B/HBoxContainer/RightArr" to="." method="_on_right_arr_clicked"]
[connection signal="mouse_entered" from="MarginContainer/CenterContainer/VBoxContainer/B/HBoxContainer/RightArr" to="MarginContainer/CenterContainer/VBoxContainer/B/HBoxContainer/RightArr" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="MarginContainer/CenterContainer/VBoxContainer/B/HBoxContainer/RightArr" to="MarginContainer/CenterContainer/VBoxContainer/B/HBoxContainer/RightArr" method="_on_mouse_exited"]
[connection signal="text_changed" from="MarginContainer/CenterContainer/LineEdit" to="." method="_on_line_edit_text_changed"]
[connection signal="text_submitted" from="MarginContainer/CenterContainer/LineEdit" to="." method="_on_line_edit_text_submitted"]
[connection signal="clicked" from="Remove" to="." method="_on_remove_clicked"]
[connection signal="mouse_entered" from="Remove" to="Remove" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Remove" to="Remove" method="_on_mouse_exited"]
[connection signal="clicked" from="Rename" to="." method="_on_rename_clicked"]
[connection signal="mouse_entered" from="Rename" to="Rename" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Rename" to="Rename" method="_on_mouse_exited"]
[connection signal="clicked" from="PFP" to="." method="_on_pfp_clicked"]
[connection signal="mouse_entered" from="PFP" to="PFP" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="PFP" to="PFP" method="_on_mouse_exited"]
